Update PalmTreeFeature.java